--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -53,8 +53,8 @@
     <Reference Include="Devmasters.Cache, Version=1.472.4.4, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Devmasters.Cache.1.472.4.4\lib\net40\Devmasters.Cache.dll</HintPath>
     </Reference>
-    <Reference Include="Devmasters.Core, Version=1.472.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Devmasters.Core.1.472.4\lib\net40\Devmasters.Core.dll</HintPath>
+    <Reference Include="Devmasters.Core, Version=1.472.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Devmasters.Core.1.472.5\lib\net40\Devmasters.Core.dll</HintPath>
     </Reference>
     <Reference Include="Devmasters.DatabaseUpgrader, Version=1.472.1.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Devmasters.DatabaseUpgrader.1.472.1.1\lib\net40\Devmasters.DatabaseUpgrader.dll</HintPath>
@@ -637,9 +637,9 @@
     <Compile Include="Search\InsolvenceSearchResult.cs" />
     <Compile Include="ES\Manager.cs" />
     <Compile Include="Search\Rule.cs" />
-    <Compile Include="Search\Rules\FullQueryReplace.cs" />
+    <Compile Include="Search\Rules\TransformPrefixSimple.cs" />
     <Compile Include="Search\Rules\VZ_CPV.cs" />
-    <Compile Include="Search\Rules\SimpleValueReplace.cs" />
+    <Compile Include="Search\Rules\TransformPrefixWithValue.cs" />
     <Compile Include="Search\Rules\Smlouva_Chyby.cs" />
     <Compile Include="Search\Rules\VZ_Form.cs" />
     <Compile Include="Search\Rules\VZ_Oblast.cs" />
