--- a/Tests/Lib.UnitTest/packages.config
+++ b/Tests/Lib.UnitTest/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="6.4.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="NEST" version="6.4.0" targetFramework="net472" />
 </packages>
