--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -9,7 +9,7 @@
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="6.4.0" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net472" />
   <package id="EMGU.CV" version="4.1.0.3420" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="Enums.NET" version="2.3.2" targetFramework="net472" />
@@ -24,7 +24,7 @@
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MimeSharp" version="1.0.0" targetFramework="net472" />
-  <package id="NEST" version="6.4.0" targetFramework="net472" />
+  <package id="NEST" version="7.4.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net472" />
   <package id="Nito.AsyncEx.Context" version="5.0.0" targetFramework="net472" />
@@ -35,9 +35,11 @@
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Scriban" version="2.1.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net472" />
