--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -11,7 +11,7 @@
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="6.4.0" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.2.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net472" />
@@ -54,13 +54,14 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Moment.js" version="2.24.0" targetFramework="net472" />
-  <package id="NEST" version="6.4.0" targetFramework="net472" />
+  <package id="NEST" version="7.4.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
