Smlouva identifikator fix
identifikator was null

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -17,7 +17,8 @@
   </connectionStrings>
   <appSettings>
 
-    <add key="DefaultIndexName" value="hlidacsmluv3" />
+    <!--<add key="DefaultIndexName" value="hlidacsmluv3" />-->
+    <add key="DefaultIndexName" value="hlidacsmluv" />
     <add key="ESDebugDataEnabled" value="true" />
 
     
